# mars-rover-project

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  STRUCTURE.md
.claude/: launch.json
.claude/commands/: assembly-order.md  bom-check.md  cad-audit.md  deploy-scripts.md  esp32-deploy.md  firmware-validate.md  fusion-export.md  preflight.md  print-log.md  project-dashboard.md  quick-audit.md  rod-cutting.md  session-handoff.md  session-start.md  skill-guide.md  stl-check.md  tolerance-calc.md  wiring-check.md
.github/workflows/: ci.yml
3d-print/: batch_export_log.txt  debug_log.txt
3d-print/body/: BatteryTray.stl  BodyQuadrant.stl  ElectronicsTray.stl  FuseHolderBracket.stl  StrainReliefClip.stl  SwitchMount.stl  TopDeck.stl  battery_tray.stl  body_quadrant_fl.stl  body_quadrant_fr.stl  body_quadrant_rl.stl  body_quadrant_rr.stl  electronics_tray.stl  fuse_holder_bracket.stl  strain_relief_clip.stl  switch_mount_plate.stl  top_deck.stl  top_deck_fl.stl  top_deck_fr.stl  top_deck_rl.stl  top_deck_rr.stl
3d-print/calibration/: BearingTestPiece.stl  TubeSocketTest.stl  bearing_test_piece.stl  calibration_test_card.stl  tube_socket_test.stl
3d-print/drivetrain/: FixedWheelMount.stl  diff_bar_adapter.stl
3d-print/hardware/: 608ZZ_Bearing.stl  M3x10_ButtonHead.stl
3d-print/steering/: ServoMount.stl  SteeringBracket.stl  SteeringHornLink.stl  SteeringKnuckle.stl  fixed_wheel_mount.stl  servo_mount.stl  steering_bracket.stl  steering_horn_link.stl  steering_knuckle.stl
3d-print/suspension/: BogiePivotConnector.stl  CableClip.stl  DifferentialLink.stl  DifferentialPivotHousing.stl  FrontWheelConnector.stl  MiddleWheelConnector.stl  RockerHubConnector.stl  bogie_arm.stl  bogie_pivot_connector.stl  cable_clip.stl  differential_pivot_housing.stl  front_wheel_connector.stl  middle_wheel_connector.stl  rocker_arm_front.stl  rocker_arm_rear.stl  rocker_hub_connector.stl
3d-print/wheels/: CuriosityV5_Tread.stl  RoverWheelV3.stl  rover_tire.stl  rover_wheel.stl  rover_wheel_v3.stl
cad/: audit_results_2026-03-26.json
cad/reference-wheels/: CuriosityWheelV5_Approved_Baseline.f3d  curiosity_spoke6_fullscale.stl  curiosity_tread_fullscale.stl
cad/scripts/: RoverAssembly.manifest  (+54 more)
scripts/: backup.bat
software/jetson/rover_bringup/: package.xml  setup.cfg  setup.py
software/jetson/rover_bringup/config/: camera_params.yaml  ekf.yaml  nav2_params.yaml
software/jetson/rover_bringup/launch/: hardware.launch.py  nav.launch.py  perception.launch.py  rover.launch.py  simulation.launch.py  teleop.launch.py
software/jetson/rover_bringup/test/: sim_test_runner.py  sim_test_scenarios.yaml
software/jetson/rover_bringup/urdf/: rover.urdf  rover.urdf.xacro
software/jetson/rover_bringup/worlds/: garden.world
software/jetson/rover_hardware/: CMakeLists.txt  package.xml
software/jetson/rover_hardware/include/rover_hardware/: uart_bridge.hpp
software/jetson/rover_hardware/src/: uart_bridge_node.cpp
software/jetson/rover_hardware/test/: test_uart_bridge_integration.py
software/jetson/rover_navigation/: package.xml  setup.cfg  setup.py
software/jetson/rover_navigation/rover_navigation/: __init__.py  ackermann_controller.py  geofence_node.py  waypoint_follower.py
software/jetson/rover_navigation/test/: test_ackermann_controller.py  test_geofence.py  test_waypoint_follower.py
tools/: backup.bat  click_fusion_script.ps1  click_ok_dialog.ps1  dump_dialog_elements.ps1  focus_and_send_shift_s.ps1  open_scripts_dialog.ps1  orbit_and_screenshot.ps1  orbit_view.ps1  search_and_run_script.ps1  send_shift_s.ps1
(+239 files in other folders)
