<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for the Mars Rover garden robot</description>
  <maintainer email="charlie@rover.local">Charlie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rover_hardware</exec_depend>
  <exec_depend>rover_navigation</exec_depend>
  <exec_depend>rover_perception</exec_depend>
  <exec_depend>rover_autonomy</exec_depend>
  <exec_depend>rover_teleop</exec_depend>
  <exec_depend>rover_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
