<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_hardware</name>
  <version>0.1.0</version>
  <description>UART bridge between Jetson and ESP32 motor controller</description>
  <maintainer email="charlie@rover.local">Charlie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rover_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
